--- a/public/themes/simpleboot3/public/head.html
+++ b/public/themes/simpleboot3/public/head.html
@@ -24,7 +24,7 @@
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Cache-Control" content="no-cache">
     <meta http-equiv="Expires" content="0">
-    <meta name="theme-color" content="#ff5000">
+    <meta name="theme-color" content="orange">
 	<style type="text/css">
 	  :root {
 		/* 变量格式 --变量名*/
