--- a/public/themes/simpleboot3/portal/index.html
+++ b/public/themes/simpleboot3/portal/index.html
@@ -240,6 +240,189 @@
                             </div>
                             <div class="time-line">
                                 <ul class="history-box">
+									<li class="active">
+									    <div class="circular"></div>
+									    <div class="name">2022</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">12-20 热烈庆祝华劳人力资源有限公司全国分公司总数达40家！</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">12-16 华劳集团总经理李永欣同志荣获“德州市人力资源服务领军人才”称号！</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">12-13 华劳集团挺进人力资源行业“民营TOP50强”！</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">11-15 华劳人力资源有限公司洛阳分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">11-11 海南中好物业服务有限公司成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">11-11 德州中好物业服务有限公司成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">10-15 刷活灵活用工平台正式上线！</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">10-14 华劳集团三体系认证审核通过</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">10-09 华劳人力资源有限公司沧州分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">09-30 华劳人力资源有限公司甘肃分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">09-19 华劳人力资源有限公司桂林分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">09-15 华劳人力资源有限公司黑龙江分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">09-05 华劳人力资源有限公司湖北分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">
+											<div>09-01 华劳人力资源有限公司宁波分公司 成立</div>
+											<div>09-01 正式启用薪太软SaaS产品服务</div>
+										</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">08-31 华劳人力资源有限公司绵阳分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">08-30 华劳人力资源有限公司天津分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">
+											<div>08-29 华劳人力资源有限公司河北分公司 成立</div>
+											<div>08-29 华劳人力资源有限公司河南分公司 成立</div>
+										</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">08-27 华劳人力资源有限公司山西分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">
+											<div>08-26 华劳人力资源有限公司江西分公司 成立</div>
+											<div>08-26 华劳人力资源有限公司四川分公司 成立</div>
+										</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">08-25 华劳人力资源有限公司湖南分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">
+											<div>08-24 华劳人力资源有限公司济南分公司 成立</div>
+											<div>08-24 华劳人力资源有限公司安徽分公司 成立</div>
+										</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">08-23 华劳人力资源有限公司云南分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">08-20 蓝领线上职介所“华劳网APP”上线！</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">08-15 华劳人力资源有限公司广东分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">08-12 华劳人力资源有限公司深圳分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">08-08 华劳人力资源有限公司上海分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">08-04 华劳人力资源有限公司广西分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">08-02 华劳人力资源有限公司江苏分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">
+											<div>07-29 华劳人力资源有限公司辽宁分公司 成立</div>
+											<div>07-29 华劳人力资源有限公司青岛分公司 成立</div>
+										</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">07-27 华劳人力资源有限公司海南分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">07-26 华劳人力资源有限公司三亚分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">07-25 华劳人力资源有限公司浙江分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">
+											<div>07-21 华劳人力资源有限公司新疆分公司 成立</div>
+											<div>07-21 华劳人力资源有限公司重庆分公司 成立</div>
+										</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">07-19 华劳人力资源有限公司福建分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">07-18 华劳人力资源有限公司陕西分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">
+											<div>07-15 华劳人力资源有限公司内蒙古分公司 成立</div>
+											<div>07-15 华劳人力资源有限公司北京分公司 成立</div>
+											<div>07-15 华劳人力资源有限公司大连分公司 成立</div>
+											<div>07-15 华劳人力资源有限公司官网上线</div>
+										</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">07-14 华劳人力资源有限公司贵州分公司 成立</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">05-08 雇员工伤保护伞“雇工伞”产品上线</div>
+									</li>
+									<li>
+									    <div class="circular"></div>
+									    <div class="name">04-30 华劳集团总经理李永欣刊登为“儒商杂志封面人物”！</div>
+									</li>
                                     <li class="active">
                                         <div class="circular"></div>
                                         <div class="name">2021</div>
