--- a/public/themes/simpleboot3/portal/about.html
+++ b/public/themes/simpleboot3/portal/about.html
@@ -151,23 +151,186 @@
 										<ul class="history-box">
 											<li class="title">
 												<div class="circular"></div>
-												<div>2022 占位</div>
+												<div>2022</div>
 											</li>
 											<li class="name">
 												<div class="circular"></div>
-												<div><span>11-17</span>上海华劳科技有限公司成立</div>
+												<div><span>12-20</span>热烈庆祝华劳人力资源有限公司全国分公司总数达40家！</div>
 											</li>
 											<li class="name">
 												<div class="circular"></div>
-												<div><span>05-26</span>中朗（北京）国际保安服务有限公司投资控股</div>
+												<div><span>12-16</span>华劳集团总经理李永欣同志荣获“德州市人力资源服务领军人才”称号！</div>
 											</li>
 											<li class="name">
 												<div class="circular"></div>
-												<div><span>05-18</span>山东华企科技服务有限公司成立</div>
+												<div><span>12-13</span>华劳集团挺进人力资源行业“民营TOP50强”！</div>
 											</li>
 											<li class="name">
 												<div class="circular"></div>
-												<div><span>04-26</span>华劳（北京）人力资源服务有限公司投资控股</div>
+												<div><span>11-15</span>华劳人力资源有限公司洛阳分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>11-11</span>海南中好物业服务有限公司成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>11-11</span>德州中好物业服务有限公司成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>10-15</span>刷活灵活用工平台正式上线！</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>10-14</span>华劳集团三体系认证审核通过</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>10-09</span>华劳人力资源有限公司沧州分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>09-30</span>华劳人力资源有限公司甘肃分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>09-19</span>华劳人力资源有限公司桂林分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>09-15</span>华劳人力资源有限公司黑龙江分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>09-05</span>华劳人力资源有限公司湖北分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div>
+													<div><span>09-01</span>华劳人力资源有限公司宁波分公司 成立</div>
+													<div><span>09-01</span>正式启用薪太软SaaS产品服务</div>
+												</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>08-31</span>华劳人力资源有限公司绵阳分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>08-30</span>华劳人力资源有限公司天津分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div>
+													<div><span>08-29</span>华劳人力资源有限公司河北分公司 成立</div>
+													<div><span>08-29</span>华劳人力资源有限公司河南分公司 成立</div>
+												</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>08-27</span>华劳人力资源有限公司山西分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div>
+													<div><span>08-26</span>华劳人力资源有限公司江西分公司 成立</div>
+													<div><span>08-26</span>华劳人力资源有限公司四川分公司 成立</div>
+												</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>08-25</span>华劳人力资源有限公司湖南分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div>
+													<div><span>08-24</span>华劳人力资源有限公司济南分公司 成立</div>
+													<div><span>08-24</span>华劳人力资源有限公司安徽分公司 成立</div>
+												</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>08-23</span>华劳人力资源有限公司云南分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>08-20</span>蓝领线上职介所“华劳网APP”上线！</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>08-15</span>华劳人力资源有限公司广东分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>08-12</span>华劳人力资源有限公司深圳分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>08-08</span>华劳人力资源有限公司上海分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>08-04</span>华劳人力资源有限公司广西分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>08-02</span>华劳人力资源有限公司江苏分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div>
+													<div><span>07-29</span>华劳人力资源有限公司辽宁分公司 成立</div>
+													<div><span>07-29</span>华劳人力资源有限公司青岛分公司 成立</div>
+												</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>07-27</span>华劳人力资源有限公司海南分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>07-26</span>华劳人力资源有限公司三亚分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>07-25</span>华劳人力资源有限公司浙江分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div>
+													<div><span>07-21</span>华劳人力资源有限公司新疆分公司 成立</div>
+													<div><span>07-21</span>华劳人力资源有限公司重庆分公司 成立</div>
+												</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>07-19</span>华劳人力资源有限公司福建分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>07-18</span>华劳人力资源有限公司陕西分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div>
+													<div><span>07-15</span>华劳人力资源有限公司内蒙古分公司 成立</div>
+													<div><span>07-15</span>华劳人力资源有限公司北京分公司 成立</div>
+													<div><span>07-15</span>华劳人力资源有限公司大连分公司 成立</div>
+													<div><span>07-15</span>华劳人力资源有限公司官网上线</div>
+												</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>07-14</span>华劳人力资源有限公司贵州分公司 成立</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>05-08</span>雇员工伤保护伞“雇工伞”产品上线</div>
+											</li>
+											<li class="name">
+												<div class="circular"></div>
+												<div><span>04-30</span>华劳集团总经理李永欣刊登为“儒商杂志封面人物”！</div>
 											</li>
 										</ul>
 									</div>
